--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ __pycache__/
 # C extensions
 *.so
 
+# Streamlit
+.streamlit/secrets.toml
+
+# Python
+*.pyc
+*.pyo
+
 # Distribution / packaging
 .Python
 build/
@@ -205,3 +212,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+scrap/data/
